solvers/TCS-Meiji/td-validate-master/test/invalid/edge-label-not-an-integer.gr
p tw 5 5
1 2notanumber
2notanumber 3
3 4
4 5
